feat: add all classes and unit tests

--- a/tests/lab_5.Tests/lab_5.Tests.csproj
+++ b/tests/lab_5.Tests/lab_5.Tests.csproj
@@ -20,4 +20,8 @@
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\lab_5\lab_5.csproj" />
+  </ItemGroup>
+
 </Project>
